[project]
name = "simple-gateway-logger"
version = "0.2.0"
requires-python = ">=3.11"

# Define runtime dependencies
dependencies = [
    "schedule>=1.2.2,<2.0.0",
    "selenium>=4.18.0,<5.0.0",
    "webdriver-manager>=4.0.2",
    "python-dotenv>=1.0.1"
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.5",
    "ty>=0.0.1a16",
]


[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.mccabe]
max-complexity = 10