[project]
name = "simple-gateway-logger"
version = "0.2.0"
description = "Focused AT&T fiber gateway and local network diagnostic logger for macOS."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "David Mease" },
]
keywords = ["att-fiber", "network-diagnostics", "selenium", "speedtest", "bufferbloat"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet",
    "Topic :: System :: Networking :: Monitoring",
]

# Define runtime dependencies
dependencies = [
    "schedule>=1.2.2,<2.0.0",
    "selenium>=4.18.0,<5.0.0",
    "python-dotenv>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/GoWithitRoger/Simple-Gateway-Logger"
Repository = "https://github.com/GoWithitRoger/Simple-Gateway-Logger"
Issues = "https://github.com/GoWithitRoger/Simple-Gateway-Logger/issues"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.5",
    "ty>=0.0.1a16",
]


[tool.ruff]
line-length = 99
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.mccabe]
max-complexity = 10
